--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ftp-deploy-me",
-  "version": "1.0.1",
+  "version": "1.0.6",
   "description": "Package de déploiement FTP",
   "main": "index.js",
+  "type": "module",
   "bin": {
     "deploy": "./bin/deploy.js"
   },
@@ -10,6 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ftp-deploy": "^2.3.5",
     "inquirer": "^8.1.2"
   },
